<resources>
    <!-- ACTION BAR DECLARATIONS -->
    <string name="app_name">Restaurant Menu</string>
    <string name="action_settings">Settings</string>

    <!-- TEXT DECLARATIONS -->
    <string name="txtTitle">Restaurant Menu</string>
    <string name="txtEntryDem">Please enter a valid item name.</string>
    <string name="txtItemID">Item ID:</string>
    <string name="txtItemCat">Item Category:</string>
    <string name="txtItemName">Item Name:</string>
    <string name="txtItemPrice">Item Price ($):</string>
    <string name="txtItemDesc">Item Description:</string>

    <!-- ERROR DECLARATIONS -->
    <string name="errNMF">No Match Found</string>
    <string name="errNA">Not Assigned</string>

    <!-- NOTIFICATION DECLARATIONS -->
    <string name="notRecAdd">Record Added</string>
    <string name="notRecDel">Record Deleted</string>
    <string name="notRecUpd">Record Updated</string>

    <!-- BUTTON LABEL DECLARATIONS -->
    <string name="btnAdd">Add</string>
    <string name="btnFind">Find</string>
    <string name="btnDelete">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="btnFindAll">Find All</string>
    <string name="btnLoad">Load</string>

    <!-- DROP DOWN - CATEGORY - DECLARATIONS -->
    <string-array name="grpCategory">
        <item>@string/errNA</item>
        <item>Appetizers</item>
        <item>Entrees</item>
        <item>Sides</item>
        <item>Desserts</item>
        <item>Drinks</item>
    </string-array>
    <string name="title_activity_lister">ListerActivity</string>
</resources>
