<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.zachary.restaurantmenu.RestMenuActivity"
    tools:showIn="@layout/activity_rest_menu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Fields">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtEntryDem"
            android:id="@+id/txtEntryDem"
            android:layout_span="2"
            android:textColor="#000000"
            android:textAlignment="center"
            android:textSize="16dp"
            android:paddingBottom="15dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtItemID"
                    android:id="@+id/txtItemID"
                    android:layout_gravity="center_vertical|right"
                    android:paddingLeft="15dp"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemID"
                    android:hint="@string/errNA"
                    android:editable="false"
                    android:enabled="false"
                    android:inputType="none"
                    android:maxWidth="200dp"
                    android:minWidth="200dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtItemCat"
                    android:id="@+id/txtItemCat"
                    android:layout_gravity="center_vertical|right"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemCat"
                    android:entries="@array/grpCategory"
                    android:spinnerMode="dialog"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtItemName"
                    android:id="@+id/txtItemName"
                    android:layout_gravity="center_vertical|right"
                    android:paddingLeft="15dp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemName"
                    android:hint="@string/errNA"
                    android:maxWidth="200dp"
                    android:minWidth="200dp"/>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtItemPrice"
                    android:id="@+id/txtItemPrice"
                    android:layout_gravity="center_vertical|right"
                    android:paddingLeft="15dp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemPrice"
                    android:hint="@string/errNA"
                    android:minWidth="200dp"
                    android:maxWidth="200dp"
                    android:inputType="number|numberDecimal"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Fields"
        android:layout_alignParentStart="false"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:id="@+id/Buttons">

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btnAdd"
            android:id="@+id/btnAdd"
            android:onClick="addItem" />

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btnFind"
            android:id="@+id/btnFind"
            android:onClick="findItem" />

        <!--
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btnUpdate"
            android:id="@+id/btnUpdate"
            android:onClick="updateItem" />
        -->

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btnDelete"
            android:id="@+id/btnDelete"
            android:onClick="deleteItem" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Buttons"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/ItemDescription"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtItemDesc"
            android:id="@+id/txtItemDesc"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemDesc"
            android:hint="@string/errNA"
            android:textSize="14dp"
            />

    </LinearLayout>
</RelativeLayout>
